# wasm-dmmf

./: .gitignore  Cargo.toml  README.md  design.md  index.js  index.ts  jest.config.js  package-lock.json  package.json  types.ts
pkg/: README.md  package.json  wasm_dmmf.d.ts  wasm_dmmf.js  wasm_dmmf_bg.wasm  wasm_dmmf_bg.wasm.d.ts
src/: lib.rs  pipeline.rs  prisma.rs
test/: benchmark.js  dmmf.js  errors.js  format.js  lib.test.js  lint.js  pipeline.js  success.js
test/fixtures/: errors.prisma  schema.prisma
test/textures/: gitlab.prisma  invalid.prisma  valid.prisma
