[package]
name = "wasm-dmmf"
version = "0.1.0"
edition = "2021"
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.78"
# serde_json = { version = "1.0", features = ["float_roundtrip"] }
datamodel = { git = "https://github.com/prisma/prisma-engines" }

# https://rustwasm.github.io/book/reference/code-size.html#compiling-with-link-time-optimizations-lto
[profile.release]
lto = true
